# datacontract-mcp

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt  server.py
.github/: pull_request_template.md
.github/workflows/: ci.yaml  release.yaml
c4/: README.md  component.mmd  container.mmd  context.mmd
data/: orders.csv
datacontracts/: video_history.csv  video_history.datacontract.yaml
doc/: README.md  dataproduct-mcp.drawio
doc/c4/: context.mmd  data_flow.mmd
examples/: orders.datacontract.yaml  orders.dataproduct.yaml  shelf_warmers.datacontract.yaml  shelf_warmers.dataproduct.yaml  video_history.dataproduct.yaml
src/datacontract_mcp/: __init__.py  asset_identifier.py  asset_manager.py  asset_utils.py  datacontract.py  datameshmanager.py  dataproduct.py  models.py  models_datacontract.py  models_dataproduct.py  playground.py  server.py  tools.py  types.py
src/datacontract_mcp/config/: config.py
src/datacontract_mcp/query/: __init__.py  base.py  factory.py  federated.py  local.py  s3.py  types.py
src/datacontract_mcp/resources/: docs.py
src/datacontract_mcp/sources/: asset_source.py  data_source.py
src/datacontract_mcp/sources/asset_plugins/: datameshmanager.py  datameshmanager_client.py  local.py
src/datacontract_mcp/sources/data_plugins/: __init__.py  databricks.py  local.py  s3.py
src/datacontract_mcp/utils/: __init__.py  yaml_utils.py
src/dataproduct_mcp/: __init__.py  asset_identifier.py  asset_manager.py  server.py  types.py
src/dataproduct_mcp/config/: __init__.py  config.py
src/dataproduct_mcp/query/: __init__.py  federated.py  types.py
src/dataproduct_mcp/resources/: docs.py
src/dataproduct_mcp/resources/yaml/: example.datacontract.yaml
src/dataproduct_mcp/sources/: __init__.py  asset_source.py  data_source.py
src/dataproduct_mcp/sources/asset_plugins/: __init__.py  datameshmanager.py  datameshmanager_client.py  local.py
src/dataproduct_mcp/sources/data_plugins/: __init__.py  databricks.py  local.py  s3.py
src/dataproduct_mcp/utils/: __init__.py  yaml_utils.py
tests/: test_databricks_source.py  test_federated_query.py  test_server_startup.py
